exports[`test renders with props 1`] = `<div id="ooyala-player-2" className="ooyala-player" style={{...}} />`;

exports[`test styles has hidden styles 1`] = `
Object {
  "color": "red",
  "display": "none",
}
`;

exports[`test styles has non hidden styles 1`] = `
Object {
  "color": "red",
}
`;
